--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
@@ -72,6 +73,7 @@ instance/
 docs/_build/
 
 # PyBuilder
+.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -91,7 +93,22 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -128,10 +145,23 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# PDF Processor specific
-# ======================
+# pytype static type analyzer
+.pytype/
 
-# Log files
+# Cython debug symbols
+cython_debug/
+
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be added to the global gitignore or merged into this project gitignore.  For a PyCharm
+#  project, it is usually recommended to include the directories .idea/JetBrains/ and
+#  out/ from version control.
+.idea/
+
+# Project-specific folders (your case!)
+logs/
+temp/
+local/
 *.log
 pdf_processor.log
 
@@ -206,13 +236,7 @@ user_preferences.json
 desktop.ini
 *.lnk
 
-# macOS specific
-.AppleDouble
-.LSOverride
-Icon
-._*
-
-# Linux specific
-*~
-.nfs*
-local/
+# Project artifacts
+output/
+processed/
+cache/
