--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,10 @@ dependencies = [
     "pyyaml>=6.0",
     "colorama>=0.4.4",
     "rich>=12.0.0",
+    # Add these missing dependencies:
+    "reportlab>=3.6.0",
+    "PyMuPDF>=1.20.0",
+    "python-docx>=0.8.11",
 ]
 
 [project.optional-dependencies]
